# S4

./: .gitattributes  .gitignore  CLAUDE.md  README.md  WORKFLOW.md  pyproject.toml
approvals/: books_close_2026-05-01.md  decisions.jsonl
audits/: 2026-04-30-overnight.md
boards/: __main__.py  inventory.md  render.py  render_html.py  schema.md
boards/adapters/: all_boards.py  exemplars.py  factory_opportunities.py  grading_events.py
boards/collectors/: all_cards.py  debts_cards.py  exemplars_cards.py  factory_opportunities_cards.py  (+2 more)
debts/: D-001.json  D-002.json  D-003.json  D-004.json  D-005.json  D-006.json  D-007.json  D-008.json  schema.md  validate.py
foundations/: bootstrap-scaffold.md  collection-program.md  data-point.md  grading-events.md  llm-sdk-denylist.txt  pointer.md  proposal.md  zero-four.md
heartbeats/: scrum_fanout_cook.toml  scrum_only.toml  scrum_then_standup.toml
meeting-notes/: 2026-04-29-continuous-process-framing.md  2026-04-29-handoff-event-001-decision.md  2026-04-29-modal-force-and-backlog.md  2026-04-29-receipts-and-existing-structure.md  2026-05-01-heartbeat-frame.md  meeting-schedule.md  narrator-console.md
proposals/: REVIEW.html  REVIEW.md
schemas/: cook_output.json  scrum_output.json
tools/: cook_event.py  cook_grounding.py  cook_outcome.py  cook_session.py  floor_growth.py  heartbeat_template.py  monitor.py  promote.py  render_proposals.py  render_proposals_html.py  shim_coverage.py  standup.py  trace_health.py
traces/: 001_gaps.md  002_gaps.md  003_gaps.md  handplay_003_runner.py  runner_trace.jsonl
(+158 files in other folders)
